--- a/app/assets/style/pages/_index.scss
+++ b/app/assets/style/pages/_index.scss
@@ -82,6 +82,15 @@
     &-dir div{
       width: 50%;
     }
+    &-mobile-chose{
+      height: 238px;
+      object-fit: cover;
+    }
+    &-img-start{
+      width: 347px;
+      border-top-left-radius: 16px;
+      border-end-start-radius: 16px;
+    }
   }
 }
 @include media-breakpoint-down(md) {
@@ -126,6 +135,11 @@
 }
 .slide-course {
   width: 100%;
+}
+@media (max-width: 992px) {
+  .card-img-course{
+    height: 200px;
+  }
 }
 @media (max-width: 992px) {
   .slide-course  {
